--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-hook-form": "^7.45.2",
     "react-icons": "^4.10.1",
     "react-loader-spinner": "^5.3.4",
+    "react-paginate": "^8.2.0",
     "react-redux": "^8.1.1",
     "react-router-dom": "^6.14.2",
     "react-toastify": "^9.1.3",
