--- a/.prettierrc
+++ b/.prettierrc
@@ -4,5 +4,9 @@
     "singleQuote": true,
     "printWidth": 80,
     "tabWidth": 2,
-    "arrowParens": "avoid"
+    "arrowParens": "avoid",
+    "jsxSingleQuote": true,
+    "plugins": [
+        "prettier-plugin-tailwindcss"
+    ]
 }
